# hR

./: Setup.hs  configure.ac  hR.buildinfo.in  hR.cabal  hr.cabal  stack.yaml
Foreign/: R.hs
Foreign/R/: Config.hs.in  Embedded.hs  Error.hs  Internals.hsc  SEXP.hs  SExp.hs  Types.hs  Util.hs
app/: repl.hs
src/: config.h.in  hr.c
src/Foreign/: HR.hs
src/Foreign/HR/: Embedded.hs  Error.hs  Internals.hsc  SEXP.hs  SExpr.hs  Types.hs  Util.hs
